src/examples/errors/19_array_out_of_bounds.veri
// Error: Array index out of bounds
// Expected error: E008 - Invalid array access

fn main() {
    let arr: [int; 5] = [0; 5];
    let x: int = arr[10];  // 10 >= 5, out of bounds
}
